@@ -1,5 +1,6 @@
 Version 0.05:
     - Fixed UNIVERSAL import warning in perl 5.12
+    - Moved Exception POD down below general Description
 Version 0.04:
     - foreach() now gives the loop correct $_ values
       This fixes:
